--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,7 @@ button:focus{
 }
 button{
 width:120px!important;
-
+outline:none!important;
 }
 
 button#add_signature{
@@ -91,4 +91,9 @@ p#formula_not_exist{
 }
 .check{
 display: block!important;
+}
+
+span .checkbox{
+  display: inline!important;
+  margin-left: 10px!important;
 }
